# fnc-tui

./: .env.example  .gitignore  README.md  pyproject.toml
src/finance_tui/: __init__.py  __main__.py  analytics.py  app.py  commands.py  config.py  models.py  parser.py  store.py  watcher.py  writer.py
src/finance_tui/ai/: cache.py  categorizer.py  insights.py  nlq.py
src/finance_tui/importers/: __init__.py  llm.py  mapper.py  readers.py  transformer.py
src/finance_tui/screens/: category_editor.py  dialogs.py  file_browser.py  import_wizard.py  insights.py  onboarding.py  overview.py  transactions.py
src/finance_tui/styles/: app.tcss
src/finance_tui/widgets/: account_table.py  alerts_panel.py  annotations_panel.py  budget_bar.py  command_palette.py  donut_chart.py  evolution_chart.py  filter_bar.py  heatmap.py  histogram.py  kpi_card.py  panel_table.py  period_selector.py  scroll_arrows.py  search_bar.py  transaction_table.py
tests/: conftest.py  test_analytics.py  test_category_writer.py  test_mapper.py  test_parser.py  test_readers.py  test_transformer.py  test_writer.py
tests/fixtures/: nested.json  sample.csv  sample.json  sample.md
