[project]
name = "finance-tui"
version = "0.1.0"
description = "Terminal UI for personal finance tracking from Obsidian markdown files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "textual-plotext>=1.0.1",
    "watchdog>=6.0.0",
    "anthropic>=0.84.0",
    "numpy>=2.4.2",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
]

[project.scripts]
finance-tui = "finance_tui.__main__:main"
fnc = "finance_tui.__main__:main"

[project.optional-dependencies]
xlsx = ["openpyxl>=3.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/finance_tui"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "textual-dev>=1.0",
]
